# yreflow

./: .gitignore  LICENSE  README.md  config.toml.example  pyproject.toml  test_login.py
.github/workflows/: nightly.yml  publish.yml  test.yml
docs/: COMMANDS.md  CONSOLE_COMMANDS.md  SECURITY.md
tests/: conftest.py  formatter_cases.toml  test_command_handlers.py  test_command_parsing.py  test_completion.py  test_console_handler.py  test_controlled_char.py  test_event_bus.py  test_format_roll.py  test_formatter.py  test_mail_handler.py  test_message_display.py  test_model_store.py  test_name_resolver.py  test_realm.py  test_room_cmd.py  test_url_catcher.py
tests/data/: command_cases.toml  formatter_cases.toml  message_display_cases.toml  store_fixtures.toml
yreflow/: __main__.py  config.py  constants.py  controller.py  formatter.py  main.py  url_catcher.py
yreflow/commands/: completion.py  console_handler.py  handler.py  mail_handler.py  name_resolver.py  room_cmd.py
yreflow/plugins/: __init__.py  base.py  manager.py
yreflow/plugins/contrib/: __init__.py  schema_entry_lfi.py  wolfery_greeting.py
yreflow/protocol/: avatar.py  avatar_service.py  connection.py  controlled_char.py  events.py  http_auth.py  model_store.py  realm.py  state.py
yreflow/ui/: app.py  base.py  format_line.py
yreflow/ui/highlighters/: __init__.py  composite.py  markup_preview.py  spellcheck.py
yreflow/ui/screens/: character_select.py  login_screen.py  look_screen.py  profile_select.py  settings_screen.py  store_browser.py  tabbable_modal.py  url_screen.py
yreflow/ui/widgets/: character_bar.py  connection_indicator.py  input_bar.py  message_view.py  nav_panel.py  watch_list.py
