[project]
name = "yreflow"
version = "0.1.3"
authors = [
    { name="Kredden", email="kredden@proactiveapathy.com" }
]
readme = "README.md"
description = "Wolfery console client"
requires-python = ">=3.11"
license = "MIT"
keywords = ["mud", "textual", "console", "client", "wolfery", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Games/Entertainment :: Role-Playing",
]
dependencies = [
    "textual>=8.0.2",
    "websockets>=16.0",
    "httpx>=0.27",
    "pyspellchecker>=0.8",
]

[project.urls]
Homepage = "https://github.com/TenjouUtena/yreflow"
Repository = "https://github.com/TenjouUtena/yreflow"
"Bug Tracker" = "https://github.com/TenjouUtena/yreflow/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
yreflow = "yreflow.main:main"
