[project]
name = "yreflow"
version = "0.2.3"
authors = [
    { name="Kredden", email="kredden@proactiveapathy.com" }
]
readme = "README.md"
description = "Wolfery console client"
requires-python = ">=3.11"
license = "MIT"
keywords = ["mud", "textual", "console", "client", "wolfery", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Games/Entertainment :: Role-Playing",
]
dependencies = [
    "textual>=8.1.1",
    "websockets>=16.0",
    "httpx>=0.27",
    "pyspellchecker>=0.9",
    "unicodeitplus>=0.3.1",
    "textual-image>=0.8.5",
    "requests>=2.32.5",
    "pillow>=12.1.1",
    "base91>=1.0.1",
]

[project.optional-dependencies]
spellcheck-macos = ["pyobjc-framework-Cocoa>=10.0"]
spellcheck-enchant = ["pyenchant>=3.2"]

[project.urls]
Homepage = "https://github.com/TenjouUtena/yreflow"
Repository = "https://github.com/TenjouUtena/yreflow"
"Bug Tracker" = "https://github.com/TenjouUtena/yreflow/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstrument>=5.1.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25",
]

[project.scripts]
yreflow = "yreflow.main:main"
